--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
     <title>Pig Game</title>
   </head>
   <body>
+    <div id="help_section">
+      <h1>How to play ?</h1>
+      <ul>
+        <li> first turn for player 1
+        </li>
+        <li>you can ROLL DICE until you get 1 in dice </li>
+        <li>once you got 1 in dice turn is moved to another player</li>
+        <li>your score will be store in temporary area and when you hold your score is added into main score if 
+        you got zero in dice then temporary score get zero and turn move to another player </li>
+
+      </ul>
+
+    </div>
     <main>
+    
       <section class="player player--0 player--active">
         <h2 class="name" id="name--0">Player 1</h2>
         <p class="score" id="score--0">43</p>
@@ -16,6 +30,7 @@
           <p class="current-label">Current</p>
           <p class="current-score" id="current--0">0</p>
         </div>
+       
       </section>
       <section class="player player--1">
         <h2 class="name" id="name--1">Player 2</h2>
